--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -6,22 +6,22 @@ header {
     justify-content: center;
   }
   
-  .dsmeta-logo-container {
+  .mtfuncionario-logo-container {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  .dsmeta-logo-container img {
+  .mtfuncionario-logo-container img {
     width: 235px;
   }
   
-  .dsmeta-logo-container h1 {
-    margin-top: 15px;
+  .mtfuncionario-logo-container h1 {
+    margin-top: 10px;
     font-size: 24px;
   }
   
-  .dsmeta-logo-container p {
+  .mtfuncionario-logo-container p {
     font-size: 14px;
     font-weight: 300;
   }
