--- a/frontend/src/components/NotificationButton/styles.css
+++ b/frontend/src/components/NotificationButton/styles.css
@@ -1,9 +1,9 @@
-.dsmeta-red-btn-container {
+.mtfuncionario-red-btn-container {
     display: flex;
     justify-content: center;
 }
 
-.dsmeta-red-btn {
+.mtfuncionario-red-btn {
   height: 45px;
   width: 45px;
   background: rgba(255, 107, 114, 0.1);
@@ -15,6 +15,6 @@
   cursor: pointer;
 }
 
-.dsmeta-red-btn img {
+.mtfuncionario-red-btn img {
     width: 19px;
 }
